# cultural_heritage_storyteller

./: README.md  hello.py  my_training_data.pkl  pyproject.toml  pyproject.toml.old1  training_data.pkl
data/: req_img_struct.txt  resp_img_struct.json
src/cultural_heritage/: crew.py  main.py
src/cultural_heritage/config/: agents.yaml  tasks.yaml
task_outputs/cultural_heritage_researcher/: research_output copy 2.json  research_output copy 3.json  research_output copy 4.json  research_output copy.json  research_output.json  research_output.yaml  research_output__1 copy.md  research_output__1.md
task_outputs/cultural_heritage_writer/: stories copy 2.md  stories copy.md  stories.md  story copy 2.html  story copy 2.md  story copy 3.html  story copy 3.md  story copy.html  story copy.md
